Changing manifest to include py files in nms migrations

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 recursive-include nms *.pyc
+recursive-exclude nms *.py
+graft nms/migrations
+
 recursive-include nms/static *
 recursive-include nms/templates *
-
-global-exclude .git
-recursive-exclude nms *.py
